[package]
name = "dipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
clap = { version = "4.1.4", features = ["derive"] }
etherparse = "0.13.0"
log = "0.4.17"
nom = "7.1.3"
pcap = "1.0.0"
simple-dns = "0.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
